--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -204,8 +204,9 @@
 					<h2><img src="./images/access/h2.png" alt="アクセス"></h2>
 					<div class="googlemap" id="map_canvas"></div>
 					<div class="bus-recommend">
-						<span class"bus-icon"><img src="./images/access/bus_icon.png" alt=""></span><span>バスのご利用をおすすめします</span>
-						<p class="bus-detail"><img src="./images/access/bus_detail.png" alt="バスを使ってくる場合"></p>
+						<span class="bus-icon"><img src="./images/access/bus_icon.png" alt=""></span><span>バスのご利用をおすすめします</span>
+						<p class="bus-detail media-pc"><img src="./images/access/bus_detail.png" alt="バスを使ってくる場合"></p>
+						<p class="bus-detail media-tb"><img src="./images/access/bus_detail_sp.png" alt="バスを使ってくる場合"></p>
 					</div>
 				</section>
 			</div>
@@ -240,6 +241,12 @@
 				</ul>
 			</nav>
 		</aside>
+		<nav class="media-tb" id="nav-sp">
+			<h1><img src="./images/common/logo-sp.png" alt=""></h1>
+			<div class="trigger">
+				<img src="./images/common/trigger.png" alt="">
+			</div>
+		</nav>
 	</div>
 	<footer id="footer">
 		<div class="sns-share">
