--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -31,6 +31,9 @@ body {
 	width: 100vw;
 	height: 100vh;
 	z-index: -2;
+	@include media(tb) {
+		background-size: 300% !important;
+	}
 }
 
 .p-bg1 {
@@ -325,6 +328,9 @@ $sidebar: 330px;
 			}
 			img {
 				width: 92%;
+				@include media(tb) {
+					width: 95%;
+				}
 				height: auto;
 			}
 		}
@@ -354,18 +360,22 @@ $sidebar: 330px;
 	.bus-recommend {
 		width: 88%;
 		margin: 36px auto 12px auto;
-		span {
+		.bus-icon {
 			display: inline-block;
 			vertical-align: top;
-			padding: 3px 0 0 5px;
+			padding: 1px 5px 0 0;
+			@include media(tb) {
+				img {
+					max-width: 26px;
+				}
+			}
 		}
 		.bus-detail {
 			margin: 16px 0 0;
-		}
-		@include media(tb) {
-			width: 95%;
-			.bus-icon {
-				max-width: 26px;
+			@include media(tb) {
+				img {
+					width: 100%;
+				}
 			}
 		}
 	}
@@ -443,6 +453,38 @@ $sidebar: 330px;
 	}
 }
 
+#nav-sp {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 50px;
+	background: #fff;
+	box-shadow: 0 0 5px rgba(0,0,0,0.15);
+	z-index: 3;
+	h1 {
+		position: absolute;
+		left: 0;
+		right: 0;
+		img {
+			width: 125px;
+			height: auto;
+		}
+	}
+	.trigger {
+		position: absolute;
+		right: 0;
+		width: 50px;
+		height: 50px;
+		background: $blue;
+		text-align: center;
+		img {
+			width: 23px;
+			padding: 13px 0 0 2px;
+		}
+	}
+}
+
 #footer {
 	width: 100%;
 	padding: 20px 0;
@@ -453,8 +495,9 @@ $sidebar: 330px;
 			display: inline-block;
 			width: 130px;
 			@include media(tb) {
+				width: 110px;
 				img {
-					max-width: 80px;
+					max-width: 70px;
 				}
 			}
 			margin: 60px 0 80px 0;
