スマホ用のナビシステム実装

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -241,10 +241,18 @@
 				</ul>
 			</nav>
 		</aside>
-		<nav class="media-tb" id="nav-sp">
+		<nav class="media-tb js-sp-nav" id="nav-sp">
 			<h1><img src="./images/common/logo-sp.png" alt=""></h1>
 			<div class="trigger">
 				<img src="./images/common/trigger.png" alt="">
+			</div>
+			<div class="gnav-sp">
+				<ul>
+					<li><a href="#about">開催概要</a></li>
+					<li><a href="#map">会場マップ</a></li>
+					<li><a href="#intro">卓の紹介</a></li>
+					<li><a href="#access">アクセス</a></li>
+				</ul>
 			</div>
 		</nav>
 	</div>
