スマホ・タブレットでメニュークリック後、メニューとじる

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -252,24 +252,24 @@
 		</header>
 		<nav class="gnav-sp media-tb">
 				<ul class="gnav-sp-menu clearfix">
-					<li><a href="#about"><span>開催<br>概要</span></a></li>
-					<li><a href="#map"><span>会場<br>マップ</span></a></li>
-					<li><a href="#intro"><span>卓<br>紹介</span></a></li>
-					<li><a href="#access"><span>アク<br>セス</span></a></li>
+					<li><a class="gnav-sp-item" href="#about"><span>開催<br>概要</span></a></li>
+					<li><a class="gnav-sp-item" href="#map"><span>会場<br>マップ</span></a></li>
+					<li><a class="gnav-sp-item" href="#intro"><span>卓<br>紹介</span></a></li>
+					<li><a class="gnav-sp-item" href="#access"><span>アク<br>セス</span></a></li>
 				</ul>
 				<ul class="gnav-sp-intro clearfix">
-					<li><a href="#san65"><img src="./images/common/nav-sp/365.png" alt="365"></a></li>
-					<li><a href="#branco"><img src="./images/common/nav-sp/branco.png" alt="branco"></a></li>
-					<li><a href="#brica"><img src="./images/common/nav-sp/brica.png" alt="brica"></a></li>
-					<li><a href="#careco"><img src="./images/common/nav-sp/careco.png" alt="careco"></a></li>
-					<li><a href="#doodle"><img src="./images/common/nav-sp/doodle.png" alt="doodle"></a></li>
-					<li><a href="#gafe"><img src="./images/common/nav-sp/gafe.png" alt="gafe"></a></li>
-					<li><a href="#glyph"><img src="./images/common/nav-sp/glyph.png" alt="glyph"></a></li>
-					<li><a href="#irodori"><img src="./images/common/nav-sp/irodori.png" alt="irodori"></a></li>
-					<li><a href="#jackin"><img src="./images/common/nav-sp/jackin.png" alt="jackin"></a></li>
-					<li><a href="#mixm"><img src="./images/common/nav-sp/mixm.png" alt="mixm"></a></li>
-					<li><a href="#res"><img src="./images/common/nav-sp/res.png" alt="res"></a></li>
-					<li><a href="#wavwav"><img src="./images/common/nav-sp/wavwav.png" alt="wavwav"></a></li>
+					<li><a class="gnav-sp-item" href="#san65"><img src="./images/common/nav-sp/365.png" alt="365"></a></li>
+					<li><a class="gnav-sp-item" href="#branco"><img src="./images/common/nav-sp/branco.png" alt="branco"></a></li>
+					<li><a class="gnav-sp-item" href="#brica"><img src="./images/common/nav-sp/brica.png" alt="brica"></a></li>
+					<li><a class="gnav-sp-item" href="#careco"><img src="./images/common/nav-sp/careco.png" alt="careco"></a></li>
+					<li><a class="gnav-sp-item" href="#doodle"><img src="./images/common/nav-sp/doodle.png" alt="doodle"></a></li>
+					<li><a class="gnav-sp-item" href="#gafe"><img src="./images/common/nav-sp/gafe.png" alt="gafe"></a></li>
+					<li><a class="gnav-sp-item" href="#glyph"><img src="./images/common/nav-sp/glyph.png" alt="glyph"></a></li>
+					<li><a class="gnav-sp-item" href="#irodori"><img src="./images/common/nav-sp/irodori.png" alt="irodori"></a></li>
+					<li><a class="gnav-sp-item" href="#jackin"><img src="./images/common/nav-sp/jackin.png" alt="jackin"></a></li>
+					<li><a class="gnav-sp-item" href="#mixm"><img src="./images/common/nav-sp/mixm.png" alt="mixm"></a></li>
+					<li><a class="gnav-sp-item" href="#res"><img src="./images/common/nav-sp/res.png" alt="res"></a></li>
+					<li><a class="gnav-sp-item" href="#wavwav"><img src="./images/common/nav-sp/wavwav.png" alt="wavwav"></a></li>
 				</ul>
 		</nav>
 	</div>
