--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -241,6 +241,10 @@
 					<li><a href="#map">会場マップ</a></li>
 					<li><a href="#intro">卓紹介</a></li>
 					<li><a href="#access">アクセス</a></li>
+					<li class="social">
+						<a href="https://twitter.com/takuten_geikou"><img src="./images/common/twitter.png" alt=""></a>
+						<a href="https://www.facebook.com/takuproject.geikou/"><img src="./images/common/facebook.png" alt=""></a>
+					</li>
 				</ul>
 			</nav>
 		</aside>
