--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -207,29 +207,33 @@ body {
 		left: 50%;
 		transform: translateX(-50%);
 		opacity: 0;
-		img {
+		.takuten {
+			width: 92.6%;
 			position: absolute;
 			top: 50%;
 			left: 50%;
 			transform-origin: 0% 0%;
 			transform: translate(-50%, -50%);
-			&.takuten {
-				width: 92.6%;
+		}
+		.dots {
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50% -50%);
+			transform-origin: 0% 0%;
+			animation: rotation 50s linear infinite;
+			.circle {
+				fill: #fff;
 			}
-			&.dots {
-				width: 100%;
-				animation: rotation 50s linear infinite;
-				@include media(sp) {
-					animation: none;
-				}
+		}
+		@keyframes rotation {
+			from {
+				transform: rotate(0deg) translate(-50%, -50%);
 			}
-			@keyframes rotation {
-				from {
-					transform: rotate(0deg) translate(-50%, -50%);
-				}
-				to {
-					transform: rotate(360deg) translate(-50%, -50%);
-				}
+			to {
+				transform: rotate(360deg) translate(-50%, -50%);
 			}
 		}
 		@include media(tb) {
