--- a/app/source/ejs/_head.ejs
+++ b/app/source/ejs/_head.ejs
@@ -8,5 +8,5 @@
 <meta property="og:image" content="./images/social/og-image.png">
 <meta property="og:description" content="「卓展」とは、名古屋市立大学芸術工学部の学生による作品展示会です。学部４年生をリーダーとして多種多様なジャンルのプロジェクトを立ち上げ、学科・学年の垣根を越えて制作を行います。今年も見どころたっぷりの展示会ですので、是非お越しください。">
 <link rel="stylesheet" href="./css/style.css">
-<link rel="icon" type="image/vnd.microsoft.icon" href="">
+<link rel="icon" type="image/vnd.microsoft.icon" href="./images/common/favicon.ico">
 <!-- アナリティクス忘れずに入れる -->
