--- a/app/source/ejs/_head.ejs
+++ b/app/source/ejs/_head.ejs
@@ -2,11 +2,14 @@
 <title>卓展2016｜名古屋市立大学芸術工学部の学生による12のプロジェクトの成果発表・展示会</title>
 <meta name="description" content="「卓展」とは、名古屋市立大学芸術工学部の学生による作品展示会です。学部４年生をリーダーとして多種多様なジャンルのプロジェクトを立ち上げ、学科・学年の垣根を越えて制作を行います。今年も見どころたっぷりの展示会ですので、是非お越しください。">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta property="og:title" content="卓展2016 | 名古屋市立大学芸術工学部の学生による12のプロジェクトの成果発表・展示会">
-<meta property="og:type" content="website">
-<meta property="og:url" content="http://taku-ten.com">
-<meta property="og:image" content="http://taku-ten.com/images/social/og-image_fb.png">
-<meta property="og:description" content="「卓展」とは、名古屋市立大学芸術工学部の学生による作品展示会です。学部４年生をリーダーとして多種多様なジャンルのプロジェクトを立ち上げ、学科・学年の垣根を越えて制作を行います。今年も見どころたっぷりの展示会ですので、是非お越しください。">
+
+<meta property="og:title" content="卓展2016｜名古屋市立大学芸術工学部の学生による12のプロジェクトの成果発表・展示会" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://taku-ten.com" />
+<meta property="og:image" content="http://taku-ten.com/images/social/og-image_fb.png" />
+<meta property="og:description" content="「卓展」とは、名古屋市立大学芸術工学部の学生による作品展示会です。学部４年生をリーダーとして多種多様なジャンルのプロジェクトを立ち上げ、学科・学年の垣根を越えて制作を行います。今年も見どころたっぷりの展示会ですので、是非お越しください。" />
+<meta property="og:site_name" content="卓展2016" />
+
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@takuten_geikou" />
 <meta name="twitter:creator" content="@takuten_geikou" />
@@ -24,5 +27,4 @@
 	ga('create', 'UA-80038830-1', 'auto');
 	ga('send', 'pageview');
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBE4gBHUMLghdpUkgAerxWAAjPW_A5uRes"></script>
-
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDq0_uWXEiNX_V11ARh_q5ngfAJ2zr0HwA"></script> -->
