--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -202,7 +202,8 @@
 				</section>
 				<section class="access js-progress" id="access">
 					<h2><img src="./images/access/h2.png" alt="アクセス"></h2>
-					<div class="googlemap" id="map_canvas"></div>
+					<!-- <div class="googlemap" id="map_canvas"></div> -->
+					<iframe class="googlemap" style="display: block;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.02101660888!2d136.9478316693522!3d35.18102872286779!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6003705a45b7e0cd%3A0xcea9a0e7712b9848!2z5ZCN5Y-k5bGL5biC56uL5aSn5a2mIOWMl-WNg-eoruOCreODo-ODs-ODkeOCuQ!5e0!3m2!1sja!2sjp!4v1467177663691" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 					<div class="bus-recommend">
 						<span class="bus-icon"><img src="./images/access/bus_icon.png" alt=""></span><span>バスのご利用をおすすめします</span>
 						<p class="bus-detail media-pc"><img src="./images/access/bus_detail.png" alt="バスを使ってくる場合"></p>
