--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -220,9 +220,12 @@ body {
 			position: absolute;
 			top: 50%;
 			left: 50%;
-			transform: translate(-50% -50%);
 			transform-origin: 0% 0%;
+			transform: translate(-50%, -50%);
 			animation: rotation 50s linear infinite;
+			@include media(tb) {
+				animation: none;
+			}
 		}
 		@keyframes rotation {
 			from {
@@ -526,14 +529,19 @@ $sidebar: 330px;
 			line-height: 1.8em;
 			span {
 				display: inline-block;
-				margin-top: 12px;
+				vertical-align: middle;
 			}
 		}
 		a {
+			display: block;
+			height: inherit;
 			font-size: 15px;
 			text-decoration: none;
 			color: #fff;
 		}
+	}
+	.gnav-sp-item {
+		vertical-align: middle;
 	}
 	.gnav-sp-intro {
 		width: 100%;
@@ -543,6 +551,7 @@ $sidebar: 330px;
 			width: 25%;
 			background-color: #fff;
 			border: 0.5px solid #eee;
+			text-align: center;
 		}
 	}
 }
