左上のメニュー

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -216,21 +216,21 @@
 			<nav>
 				<div class="progress">
 					<svg class="progress-dots js-progress-dots" width="330px" height="330px">
-						<a class="js-progressAnchor" href=""><circle cx="238" cy="10" /></a>
-						<a class="js-progressAnchor" href=""><circle cx="253" cy="38" /></a>
-						<a class="js-progressAnchor" href=""><circle cx="262" cy="68" /></a>
-						<a class="js-progressAnchor" href=""><circle cx="265" cy="100" /></a>
-						<a class="js-progressAnchor" href=""><circle cx="261" cy="132" /></a>
-						<a class="js-progressAnchor" href=""><circle cx="252" cy="162" /></a>
-						<a class="js-progressAnchor" href=""><circle cx="236" cy="190" /></a>
-						<a class="js-progressAnchor" href=""><circle cx="215" cy="214" /></a>
-						<a class="js-progressAnchor" href=""><circle cx="190" cy="234" /></a>
-						<a class="js-progressAnchor" href=""><circle cx="161" cy="248" /></a>
-						<a class="js-progressAnchor" href=""><circle cx="131" cy="256" /></a>
-						<a class="js-progressAnchor" href=""><circle cx="99" cy="258" /></a>
-						<a class="js-progressAnchor" href=""><circle cx="67" cy="254" /></a>
-						<a class="js-progressAnchor" href=""><circle cx="37" cy="244" /></a>
-						<a class="js-progressAnchor" href=""><circle cx="10" cy="227" /></a>
+						<a class="js-progressAnchor" href=""><circle r="5" cx="238" cy="10" /></a>
+						<a class="js-progressAnchor" href=""><circle r="5" cx="253" cy="38" /></a>
+						<a class="js-progressAnchor" href=""><circle r="5" cx="262" cy="68" /></a>
+						<a class="js-progressAnchor" href=""><circle r="5" cx="265" cy="100" /></a>
+						<a class="js-progressAnchor" href=""><circle r="5" cx="261" cy="132" /></a>
+						<a class="js-progressAnchor" href=""><circle r="5" cx="252" cy="162" /></a>
+						<a class="js-progressAnchor" href=""><circle r="5" cx="236" cy="190" /></a>
+						<a class="js-progressAnchor" href=""><circle r="5" cx="215" cy="214" /></a>
+						<a class="js-progressAnchor" href=""><circle r="5" cx="190" cy="234" /></a>
+						<a class="js-progressAnchor" href=""><circle r="5" cx="161" cy="248" /></a>
+						<a class="js-progressAnchor" href=""><circle r="5" cx="131" cy="256" /></a>
+						<a class="js-progressAnchor" href=""><circle r="5" cx="99" cy="258" /></a>
+						<a class="js-progressAnchor" href=""><circle r="5" cx="67" cy="254" /></a>
+						<a class="js-progressAnchor" href=""><circle r="5" cx="37" cy="244" /></a>
+						<a class="js-progressAnchor" href=""><circle r="5" cx="10" cy="227" /></a>
 					</svg>
 					<h1 class="progress-title"><a href="http://taku-ten.com"><img src="./images/common/menu.png" alt=""></a></h1>
 				</div>
