メニュー盾中央

--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -529,6 +529,7 @@ $sidebar: 330px;
 			line-height: 1.8em;
 			span {
 				display: inline-block;
+				margin-top: 6vw;
 				vertical-align: middle;
 			}
 		}
