google map api 変更

--- a/app/source/ejs/_head.ejs
+++ b/app/source/ejs/_head.ejs
@@ -27,4 +27,4 @@
 	ga('create', 'UA-80038830-1', 'auto');
 	ga('send', 'pageview');
 </script>
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDq0_uWXEiNX_V11ARh_q5ngfAJ2zr0HwA"></script> -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFoCHP4BiyG-LpYEf2OBaVb3YjFSHgis8"></script>
