メニューを２段組に

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -254,10 +254,10 @@
 		</header>
 		<nav class="gnav-sp media-tb">
 				<ul class="gnav-sp-menu clearfix">
- 					<li><a class="gnav-sp-item" href="#about"><span>開催<br>概要</span></a></li>
-					<li><a class="gnav-sp-item" href="#map"><span>会場<br>マップ</span></a></li>
-					<li><a class="gnav-sp-item" href="#intro"><span>卓<br>紹介</span></a></li>
-					<li><a class="gnav-sp-item" href="#access"><span>アク<br>セス</span></a></li>
+ 					<li><a class="gnav-sp-item" href="#about"><span>開催概要</span></a></li>
+					<li><a class="gnav-sp-item" href="#map"><span>会場マップ</span></a></li>
+					<li><a class="gnav-sp-item" href="#intro"><span>卓紹介</span></a></li>
+					<li><a class="gnav-sp-item" href="#access"><span>アクセス</span></a></li>
 				</ul>
 				<ul class="gnav-sp-intro clearfix">
 					<li><a class="gnav-sp-item" href="#san65"><img src="./images/common/nav-sp/365.png" alt="365"></a></li>
