--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -114,7 +114,7 @@
 						<div class="p-img1"><img src="./images/detail/gafe/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
 						<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 							<h3>ゲーミフィケーションを用いたゲーム制作。</h3>
-							<p>チームそれぞれにおいて、まず現代社会に存在する問題点について様々な案を出し、その中から扱う社会問題を決定し、その社会問題をゲームを通してどう解決していくか、ゲームを通してユーザーに届けるためにはどういうゲームシステムにするかなど、ゲーミフィケーションの考えのもとゲームを制作を行っている卓です。</p>
+							<p>チームそれぞれにおいて、まず現代社会に存在する問題点について様々な案を出し、その中から扱う社会問題を決定し、その社会問題をゲームを通してどう解決していくか、ゲームを通してユーザーに届けるためにはどういうゲームシステムにするかなど、ゲーミフィケーションの考えのもとゲームの制作を行っている卓です。</p>
 						</div>
 						<div class="p-img2"><img src="./images/detail/gafe/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
 						<div class="p-img3"><img src="./images/detail/gafe/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
@@ -124,7 +124,7 @@
 						<div class="p-img1"><img src="./images/detail/doodle/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
 						<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 							<h3>遊び心を取り入れたWeb制作</h3>
-							<p>Googleのアプリケーションに多く見られる遊び心を参考にし取り入れたWeb制作を行う卓です。Webサイト・アプリケーション・ゲームなどジャンルは問わず、個人制作・グループ制作も問いません。また、DoodleでのWeb制作は実践から入るので、UXデザインという小難しい考え方をより身近に感じることができます。</p>
+							<p>Googleのアプリケーションに多く見られる遊び心を参考にし取り入れたWeb制作を行う卓です。Webサイト・アプリケーション・ゲームなどジャンルは問わず、個人制作・グループ制作も問いません。また、DoodleでのWeb制作は未経験者であっても実践から入るので、「遊び心を考える」ことを通して、UXデザインという小難しい考え方をより身近に感じることができます。</p>
 						</div>
 						<div class="p-img2"><img src="./images/detail/doodle/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
 						<div class="p-img3"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
