--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -73,8 +73,9 @@
 				</section>
 				<section class="map js-progress" id="map">
 					<h2><img src="./images/map/h2.png" alt="会場マップ"></h2>
-					<p class="floor-map media-pc"><img src="./images/map/map.png" alt="会場マップ"></p>
-					<p class="floor-map media-tb"><img src="./images/map/map-sp.png" alt="会場マップ"></p>
+					<p class="floor-map"><img src="./images/map/map-1f.png" alt="会場マップ1F"></p>
+					<p class="floor-map"><img src="./images/map/map-2f.png" alt="会場マップ2F"></p>
+					<p class="floor-map"><img src="./images/map/map-3f.png" alt="会場マップ3F"></p>
 				</section>
 				<section class="intro js-randomList" id="intro">
 					<h2><img src="./images/detail/h2.png" alt="卓紹介"></h2>
